#2392 Minor improvements to tests